--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,24 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<h1 class="text center">{{title}}</h1>
+<p class="center">Welcome to {{title}}</p>
+
+
+<div class="ui right ordered steps">
+    <div class="completed step">
+        <div class="content">
+            <div class="title">Shipping</div>
+            <div class="description">Choose your shipping options</div>
+        </div>
+    </div>
+    <div class="completed step">
+        <div class="content">
+            <div class="title">Billing</div>
+            <div class="description">Enter billing information</div>
+        </div>
+    </div>
+    <div class="active step">
+        <div class="content">
+            <div class="title">Confirm Order</div>
+            <div class="description">Verify order details</div>
+        </div>
+    </div>
+</div>
