--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,12 +13,12 @@
 <body>
 <div class="ui left fixed inverted vertical menu">
     <div class="item">
-        <img class="ui small centered image" src="/images/planet-earth.svg">
+        <img class="ui centered image" src="/images/planet-earth.svg">
     </div>
-    <a class="item active">
+    <a class="item" href="/">
         Dashboard
     </a>
-    <a class="item">
+    <a class="item" href="/map">
         Open PULSE
     </a>
     <a class="item bottom">
