--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,24 +1,51 @@
-<h1 class="text center">{{title}}</h1>
-<p class="center">Welcome to {{title}}</p>
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
 
-<div class="ui right ordered steps">
-    <div class="completed step">
-        <div class="content">
-            <div class="title">Shipping</div>
-            <div class="description">Choose your shipping options</div>
-        </div>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <title>Homepage</title>
+  <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+  <link href="/stylesheets/homepage.min.css" rel="stylesheet">
+</head>
+<body>
+  <header class="masthead text-center text-white">
+    <div class="masthead-content">
+      <div class="container">
+        <h1 class="masthead-heading mb-0">Pulse</h1>
+        <h2 class="masthead-subheading mb-0">Monitor Traffic</h2>
+      </div>
     </div>
-    <div class="completed step">
-        <div class="content">
-            <div class="title">Billing</div>
-            <div class="description">Enter billing information</div>
+  </header>
+  <section>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="p-5">
+          <h2 class="display-4">For all your traffic information needs</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+
         </div>
+      </div>
     </div>
-    <div class="active step">
-        <div class="content">
-            <div class="title">Confirm Order</div>
-            <div class="description">Verify order details</div>
+  </section>
+  <section>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6 order-lg-2">
+          <div class="p-5">
+          </div>
         </div>
+        <div class="col-lg-6 order-lg-1">
+        </div>
+      </div>
     </div>
-</div>
+    </div>
+  </section>
+</body>
+
+</html>
