--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,15 @@ body {
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
 a {
-    color: #00B7FF; }
+    color: #00B7FF;
+    font-size: 15px;}
 
+#sidebar {
+    width:210px;
+}
+
+#logo{
+  max-width:210px;
+  max-height: 210px;
+}
 /*# sourceMappingURL=style.css.map */
