--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,6 +4,7 @@
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css'/>
     <link rel="stylesheet" href="/semantic/dist/semantic.css"/>
+
     <script
             src="https://code.jquery.com/jquery-3.1.1.min.js"
             integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
@@ -11,9 +12,10 @@
     <script src="/semantic/dist/semantic.min.js"></script>
 </head>
 <body>
-<div class="ui left fixed inverted vertical menu">
+
+<div id="sidebar" class="ui left fixed inverted vertical menu">
     <div class="item">
-        <img class="ui centered image" src="/images/planet-earth.svg">
+        <img id="logo" class="ui centered image" src="/images/pulselogo.png">
     </div>
     <a class="item" href="/">
         Dashboard
@@ -25,7 +27,6 @@
         Logout
     </a>
 </div>
-
 {{{body}}}
 </body>
 </html>
