--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,1 +1,97 @@
-hello
+<html><head>
+  <!-- Standard Meta -->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
+  <!-- Site Properties -->
+  <title>Register</title>
+
+
+  <style type="text/css">
+    body {
+      
+      background-image: url("https://fpdl.vimeocdn.com/vimeo-prod-skyfire-std-us/01/3191/7/190959054/634938835.mp4?token=1522084345-0x804f715212595d6e6e7b41be5c2bbb3f779fc539");
+    }
+    body > .grid {
+      height: 100%;
+    }
+    .image {
+      margin-top: -100px;
+    }
+    .column {
+      max-width: 450px;
+    }
+  </style>
+</head>
+<body>
+
+<div class="ui middle aligned center aligned grid">
+  <div class="column">
+    <h2 class="ui teal image header">
+      <img src="assets/images/logo.png" class="image">
+      <div class="content">
+        Register
+      </div>
+    </h2>
+    <form class="ui large form">
+      <div class="ui stacked segment">
+        <div class="field">
+          <div class="ui left icon input">
+            <i class="user icon"></i>
+            <input type="text" name="username" placeholder="Username">
+          </div>
+        </div>
+        <div class="field">
+          <div class="ui left icon input">
+            <i class="at icon"></i>
+            <input type="text" name="email" placeholder="E-mail address">
+          </div>
+        </div>
+        <div class="field">
+          <div class="ui left icon input">
+            <i class="lock icon"></i>
+            <input type="password" name="password" placeholder="Password">
+          </div>
+        </div>
+        <div class="field">
+          <div class="ui left icon input">
+            <i class="lock icon"></i>
+            <input type="password" name="repassword" placeholder="Re-enter Password">
+          </div>
+        <div class="field">
+            <div class="ui fluid search selection dropdown">
+                <input type="hidden" name="region">
+                <i class="dropdown icon"></i>
+                <div class="default text">Select Region</div>
+                <div class="menu">
+                    <div class="item" data-value="af"><i class="af flag"></i>Afghanistan</div>
+                    <div class="item" data-value="ma"><i class="ma flag"></i>Morocco</div>
+                    <div class="item" data-value="mz"><i class="mz flag"></i>Mozambique</div>
+                    <div class="item" data-value="na"><i class="na flag"></i>Namibia</div>
+                    <div class="item" data-value="nr"><i class="nr flag"></i>Nauru</div>
+                    <div class="item" data-value="np"><i class="np flag"></i>Nepal</div>
+                    <div class="item" data-value="an"><i class="an flag"></i>Netherlands Antilles</div>
+                    <div class="item" data-value="nl"><i class="nl flag"></i>Netherlands</div>
+                    <div class="item" data-value="nc"><i class="nc flag"></i>New Caledonia</div>
+                    <div class="item" data-value="ua"><i class="ua flag"></i>Ukraine</div>
+                    <div class="item" data-value="ae"><i class="ae flag"></i>United Arab Emirates</div>
+                    <div class="item" data-value="us"><i class="us flag"></i>United States</div>
+                    <div class="item" data-value="zw"><i class="zw flag"></i>Zimbabwe</div>
+                </div>
+                </div>
+          </div>     
+        </div>
+        <div class="ui fluid large teal submit button">Sign up!</div>
+      </div>
+
+      <div class="ui error message"></div>
+
+    </form>
+  </div>
+</div>
+
+
+
+
+</body></html>
