--- a/views/register.hbs
+++ b/views/register.hbs
@@ -58,39 +58,39 @@
           <div class="ui left icon input">
             <i class="lock icon"></i>
             <input type="password" name="repassword" placeholder="Re-enter Password">
-          </div>
+          </div>    
+        </div>
         <div class="field">
             <div class="ui fluid search selection dropdown">
-                <input type="hidden" name="region">
+                <input type="hidden" name="region"><i class="building icon"></i>
                 <i class="dropdown icon"></i>
                 <div class="default text">Select Region</div>
                 <div class="menu">
-                    <div class="item" data-value="af"><i class="af flag"></i>Afghanistan</div>
-                    <div class="item" data-value="ma"><i class="ma flag"></i>Morocco</div>
-                    <div class="item" data-value="mz"><i class="mz flag"></i>Mozambique</div>
-                    <div class="item" data-value="na"><i class="na flag"></i>Namibia</div>
-                    <div class="item" data-value="nr"><i class="nr flag"></i>Nauru</div>
-                    <div class="item" data-value="np"><i class="np flag"></i>Nepal</div>
-                    <div class="item" data-value="an"><i class="an flag"></i>Netherlands Antilles</div>
-                    <div class="item" data-value="nl"><i class="nl flag"></i>Netherlands</div>
-                    <div class="item" data-value="nc"><i class="nc flag"></i>New Caledonia</div>
-                    <div class="item" data-value="ua"><i class="ua flag"></i>Ukraine</div>
-                    <div class="item" data-value="ae"><i class="ae flag"></i>United Arab Emirates</div>
-                    <div class="item" data-value="us"><i class="us flag"></i>United States</div>
-                    <div class="item" data-value="zw"><i class="zw flag"></i>Zimbabwe</div>
+                    <div class="item" data-value="zw">Zimbabwe</div>
+                    <div class="item" data-value="zw">Zimbabwe2</div>
+                    <div class="item" data-value="zw">Zimbabwe3</div>
+                    <div class="item" data-value="zw">Zimbabwe4</div>
+                    <div class="item" data-value="zw">Zimbabwe5</div>
+                    <div class="item" data-value="zw">Zimbabwe6</div>
+                    <div class="item" data-value="zw">Zimbabwe7</div>
                 </div>
                 </div>
-          </div>     
-        </div>
+          </div> 
         <div class="ui fluid large teal submit button">Sign up!</div>
       </div>
 
       <div class="ui error message"></div>
+      
 
     </form>
   </div>
 </div>
 
+<script>
+    $('.ui.dropdown')
+  .dropdown()
+;
+</script>
 
 
 
