--- a/views/login.hbs
+++ b/views/login.hbs
@@ -10,7 +10,7 @@
 
   <style type="text/css">
     body {
-      
+
       background-image: url("https://fpdl.vimeocdn.com/vimeo-prod-skyfire-std-us/01/3191/7/190959054/634938835.mp4?token=1522084345-0x804f715212595d6e6e7b41be5c2bbb3f779fc539");
     }
     body > .grid {
@@ -94,7 +94,7 @@
     </form>
 
     <div class="ui message">
-      New to us? <a href="#">Sign Up</a>
+      New to us? <a href="register">Sign Up</a>
     </div>
   </div>
 </div>
